--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <body><!-- the body element is where everything we will see on the page will go -->
     
     <!-- our soon to be beautiful rainbow! -->
-    <div> <!-- the grandest grandparent div -->
-      <div>
-        <div>
-          <div>
-            <div>
-              <div">
-                <div></div> <!-- the grandest child div -->
+    <div id="Red"> <!-- the grandest grandparent div -->
+      <div id="Orange">
+        <div id="Yellow">
+          <div id="Green">
+            <div id="Blue">
+              <div id="Indigo">
+                <div id="Violet"></div> <!-- the grandest child div -->
               </div>
             </div>
           </div>
