--- a/index.html
+++ b/index.html
@@ -1,27 +1,26 @@
 <html>
 
   <head><!-- where all the meta data will go, like and files we need to include -->
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="main.css"> 
     <title>My Little Rainbow</title><!-- the title is what appears on your tab -->
   </head>
 
   <body><!-- the body element is where everything we will see on the page will go -->
     
     <!-- our soon to be beautiful rainbow! -->
-    <div> <!-- the grandest grandparent div -->
-      <div>
-        <div>
-          <div>
-            <div>
-              <div">
-                <div></div> <!-- the grandest child div -->
+    <div id="red"> 
+      <div id="orange"> 
+        <div id="yellow"> 
+          <div id="green"> 
+            <div id="blue"> 
+              <div" id="indigo"> 
+                <div id="violet"> 
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-
   </body>
 
 </html>
