--- a/index.html
+++ b/index.html
@@ -6,22 +6,24 @@
   </head>
 
   <body><!-- the body element is where everything we will see on the page will go -->
-    
+    <h1 id="title">My Little Rainbow</h1>
+    <h2 id="text">Yay, this was fun!</h2> 
     <!-- our soon to be beautiful rainbow! -->
-    <div> <!-- the grandest grandparent div -->
-      <div>
-        <div>
-          <div>
-            <div>
-              <div">
-                <div></div> <!-- the grandest child div -->
+    <div id="red"> <!-- the grandest grandparent div -->
+      <div id="orange">
+        <div id="yellow">
+          <div id="green">
+            <div id="blue">
+              <div id="indigo">           
+                <div id="violet"></div> <!-- the grandest child div -->
+                 </div>  
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-
+         
   </body>
 
 </html>
