Updated HTML CSS

--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
     <title>My Little Rainbow</title><!-- the title is what appears on your tab -->
   </head>
 
+    <h1>Magicoms Little Rainbow CSS Practice</h1>
+    <p>Herein, we delve into the magic of CSS with some rain!</p>
+  
+
   <body><!-- the body element is where everything we will see on the page will go -->
     
     <!-- our soon to be beautiful rainbow! -->
-    <div> <!-- the grandest grandparent div -->
-      <div>
-        <div>
-          <div>
-            <div>
-              <div">
-                <div></div> <!-- the grandest child div -->
+    <div id="red"> <!-- the grandest grandparent div -->
+      <div id="orange">
+        <div id="yellow">
+          <div id="green">
+            <div id="blue">
+              <div id="indigo">
+                <div id="violet"></div> <!-- the grandest child div -->
               </div>
             </div>
           </div>
